# vivamir

./: LICENSE  README.md  pyproject.toml  requirements.txt
default/: vivamir.pyl
default/vivamir/: .gitignore
src/vivamir/: ignore-default.txt  library-default.toml  main.py  project-default.toml  vivamir.py
src/vivamir/commands/: export.py  generate.py  init.py  open.py  remote.py  sources.py
src/vivamir/utility/: paths.py  prompt.py  version.py
test/: test_vivamir.py
