[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vivamir"
version = "3.2.1"
description = 'AMD Vivado mirroring utility'
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich",
    "typer",
    "dacite"
]

[project.scripts]
vivamir = "vivamir.main:main"
