[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vivamir"
version = "3.3.1"
description = 'AMD Vivado mirroring utility'
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "rich",
    "typer",
    "dacite",
    "toml"
]

[project.scripts]
vivamir = "vivamir.main:main"
